 ##
 # Copyright 2017 Gerald Haesendonck
 # Licensed under the Academic Free License version 3.0
 ##

[package]
name = "ntriple"
version = "0.1.1"
description = "A simple RDF N-Triples parser"
repository = "https://github.com/ghsnd/ntriple"
homepage = "https://github.com/ghsnd/ntriple"
documentation = "https://ghsnd.github.io/ntriple_0.1/ntriple/index.html"
readme = "README.md"
keywords = ["N-Triples", "RDF", "parser"]
categories = ["parsing", "data-structures"]
license = "AFL-3.0"
authors = ["Gerald Haesendonck"]
build = "build.rs"

[badges]
travis-ci = { repository = "ghsnd/ntriple"}

[build-dependencies]
peg = "0.5"

[profile.doc]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'
